@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.91 2005/03/20 09:03:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.92 2005/03/21 04:52:48 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  20 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Added the amd64ArchitectureTemplate, mostly a copy of x86 without lilo.
 
   20 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added _get_packages_to_emerge() to GLIArchitectureTemplate and calls in
